# yu-speech

./: .gitignore  Cargo.toml  Dockerfile.cuda  Dockerfile.metal  README.md  client.py  client_concurrent.py
.github/workflows/: python-wheels.yaml
candle-gqa-kernels/: Cargo.toml  build.rs
candle-gqa-kernels/src/: lib.rs
fish_speech_core/: Cargo.toml
fish_speech_core/lib/audio/: functional.rs  spectrogram.rs
fish_speech_core/lib/codec/: convnext.rs  decoder.rs  firefly.rs  fsq.rs  grouped_residual_fsq.rs  hifi_gan.rs  quantizer.rs
fish_speech_core/lib/codec/utils/: mod.rs
fish_speech_core/lib/lm/: dual_ar.rs
fish_speech_core/lib/lm/generate/: mod.rs  single_batch.rs  static_batch.rs  utils.rs
fish_speech_core/lib/lm/ops/: repeat_kv.rs
fish_speech_core/lib/lm/sampling/: mod.rs  rep_pen.rs
fish_speech_core/lib/text/: clean.rs  prompt.rs
fish_speech_core/tests/: audio_load.rs  resample.rs  text_preprocess.rs  wav_roundtrip.rs
fish_speech_python/: Cargo.toml
fish_speech_python/src/: codec.rs  lm.rs
server/: Cargo.toml
server/lib/: state.rs
server/lib/audio/: codec.rs  mimi.rs  opus.rs
server/lib/handlers/: encode_speech.rs  error.rs  send_hidden_states.rs  speech.rs  supported_voices.rs
server/lib/utils/: load.rs  mod.rs
server/src/: main.rs
voices-template/: index.json
