[workspace]
members = [
    "candle-gqa-kernels",
    "fish_speech_core",
    "fish_speech_python",
    "server",
]
resolver = "3"
package.version = "0.3.0"
package.edition = "2024"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
codegen-units = 1

[workspace.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
candle-flash-attn = "0.9"
tokenizers = "0.22"
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["multipart"] }
bindgen_cuda = "0.1.5"
byteorder = "1.5.0"
bytes = "1.8.0"
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
hf-hub = "0.4.1"
indicatif = "0.17.8"
moshi = "0.5.2"
num = "0.4"
num-traits = "0.2"
numpy = "0.26"
ogg = { version = "0.9.1", features = ["tokio-util", "async"] }
opus2 = {version = "0.3.2", features = ["bundled"]}
pyo3 = "0.26"
rand = "0.8"
rayon = "1.10.0"
regex = "1.10"
rustfft = "6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = "0.5"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "5"
fish_speech_core = { path = "fish_speech_core" }
candle-gqa-kernels = { path = "candle-gqa-kernels" }
