[package]
name = "candle-gqa-kernels"
edition.workspace = true
version.workspace = true

description = "CUDA kernels for GQA Candle models"
repository = "https://github.com/EndlessReform/candle-gqa"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT"


[dependencies]

[build-dependencies]
bindgen_cuda = { workspace = true }
