[package]
name = "fish_speech_core"
version = { workspace = true }
edition.workspace = true

[lib]
name = "fish_speech_core"
path = "lib/lib.rs"

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:candle-gqa-kernels",
]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]


[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
candle-core = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
candle-gqa-kernels = { workspace = true, optional = true }
serde_json = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
