[package]
name = "fish_speech_python"
version = { workspace = true }
edition.workspace = true

[lib]
name = "fish_speech"
crate-type = ["cdylib"]

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "fish_speech_core/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "fish_speech_core/metal"]

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
tokenizers = { workspace = true }
fish_speech_core = { workspace = true }


