[package]
name = "server"
version = { workspace = true }
edition.workspace = true

[lib]
name = "server"
path = "lib/lib.rs"

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "moshi/cuda",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "moshi/metal",
]
flash-attn = ["cuda", "dep:candle-flash-attn"]
mimi = ["dep:moshi"]


[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
candle-core = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hf-hub = { workspace = true }
indicatif = { workspace = true }
moshi = { workspace = true, optional = true }
num = { workspace = true }
num-traits = { workspace = true }
ogg = { workspace = true }
opus2 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symphonia = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zip = { workspace = true }

fish_speech_core = { workspace = true }


